# algopt

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  format
dot-prod/: dot_data_t.hpp  dot_prod_main.cpp  thread_funcs.cpp  thread_funcs.hpp  utility.cpp  utility.hpp
dotprod/: CMakeLists.txt
dotprod/src/: dot_data_t.hpp  dot_prod_funcs.cpp  dotprod.cpp
matvec1/: CMakeLists.txt  algorithms.cpp  algorithms.hpp  matvec1_main.cpp  utility.cpp  utility.hpp
matvec1/src/: matvec1.cpp
matvec2/: CMakeLists.txt  algorithms.cpp  algorithms.hpp  matvec2_main.cpp  utility.cpp
matvec2/src/: algorithms2.hpp  matvec2.cpp
src/dotprod/: dot_data_t.hpp  dot_prod_funcs.cpp  dot_prod_funcs.hpp  dot_prod_main.cpp  thread_funcs.hpp  utility.hpp
src/matvec1/: algorithms.cpp  matvec1_main.cpp  utility.cpp
src/matvec2/: algorithms.cpp  matvec2_algorithms.cpp  matvec2_main.cpp  utility.hpp
